# netsukuku

./: .gitignore  AUTHORS  CMakeLists.txt  CNAME  ChangeLog  Makefile.am  Makefile.in  README.md  SConstruct  accept_8c.html  accept_8c.js  accept_8c__incl.map  accept_8c__incl.md5  accept_8h.html  accept_8h.js  accept_8h__dep__incl.map  accept_8h__dep__incl.md5  accept_8h_source.html  andna_8c.html  andna_8c.js  andna_8c__incl.map  andna_8c__incl.md5  andna_8h.html  andna_8h.js  andna_8h__dep__incl.map  andna_8h__dep__incl.md5  andna_8h__incl.map  andna_8h__incl.md5  andna_8h_source.html  andna__cache_8c.html  andna__cache_8c.js  andna__cache_8c__incl.map  andna__cache_8c__incl.md5  andna__cache_8h.html  andna__cache_8h.js  andna__cache_8h__dep__incl.map  andna__cache_8h__dep__incl.md5  andna__cache_8h__incl.map  andna__cache_8h__incl.md5  andna__cache_8h_source.html  (+1126 more)
.github/workflows/: ci.yml  codeql-analysis.yml  doc.yml
conf/: Makefile.am  netsukuku.conf.in
doc/: Doxyfile.in
doc/articles/: Ntk_civic_net.fr
doc/old/: README
doc/old/articles/: Ntk_Developing_World  Ntk_New_Global_Net  Ntk_New_Global_Net.fr  Ntk_New_Global_Net.ita  Ntk_civic_net  Ntk_civic_net.fr  Ntk_civic_net.ita
doc/old/faq/: FAQ  FAQ.fr  FAQ.ru
doc/old/howto/: igs_howto
doc/old/main_doc/: netsukuku  netsukuku.ita
doc/old/misc/: Ntk_Grow_Netsukuku  Ntk_Internet_tunnels  Ntk_features_list  Ntk_scalability  mailinglist
doc/rfc/: NTK_RFC0001  NTK_RFC0001.md  NTK_RFC0002.md  NTK_RFC0003  NTK_RFC0003.md  NTK_RFC0004.md  NTK_RFC0005.md  NTK_RFC0006  NTK_RFC0006.md  NTK_RFC0007  NTK_RFC0007.md  NTK_RFC0008  NTK_RFC0009  NTK_RFC0009.md  NTK_RFC0010  NTK_RFC0011  NTK_RFC0012  NTK_RFC0013  NTK_RFC0014  NTK_RFC0015  NTK_RFC0016  README.md
include/netsukuku/: console.h  log.h  opt.h
include/netsukuku/file/: conf.h
include/netsukuku/net/: packet.h  packet_old.h
include/netsukuku/utils/: xmalloc.h
lib/: CMakeLists.txt  Makefile.am  conf.c  fs.c  fs.h  log.c  logger.c  utils.h
libQSPN/: CMakeLists.txt  Makefile.am  QSPN.h
libQSPN/tests/: CMakeLists.txt  Makefile.am  test_dummy.c
man/: Makefile.am  ntk-resolv.pod
meta/doc/: Doxyfile
meta/doc/articles/: Ntk_New_Global_Net.fr
ntk-cli/: CMakeLists.txt  Makefile.am  main.c
ntk-console/: Makefile.am  cmd.c  main.c  ntk-console  ntkconsole.h  request.c
ntk-resolv/: Makefile.am  main.c  ntk-resolv  opt.c  opt.h
ntkd/: CMakeLists.txt  Makefile.am  daemon.c  daemon.h  main.c  map.h  net.h  ntkd  opt.c  opt.h
ntkd/config/: cfg.c  cfg.h  opt.c  opt.h
ntkd/net/: interface.c  interface.h
ntkd/network/: node.h  server.c  server.h
ntkd/protocol/: packet.h
ntkd/radar/: radar.c
ntkd/webui/: webui.c  webui.h
po/: ChangeLog  Makevars  POTFILES.in  netsukuku.pot
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_4.js  classes_5.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  defines_0.js  defines_1.js  defines_10.js  (+117 more)
src/: Makefile.am  SConscript  accept.c  andna.c  andna_cache.c  andns.c  andns_lib.c  andns_lib.h  andns_net.c  andns_net.h  andns_snsd.c  bmap.c  common.h  common.mk  conf.c  config.h.in  console.h  crypto.c  daemon.c  dns_wrapper.c  dnslib.c  endianness.c  endianness.h  err_errno.c  err_errno.h  gmap.c  gmap.h  hook.c  if.c  igs.c  igs.h  inet.c  iptunnel.c  krnl_route.c  krnl_rule.c  libnetlink.c  libping.c  ll_map.c  log.c  log.h  (+19 more)
src/conf/: netsukuku.conf.in
src/libiptc/: ipt_connmark.h
src/libntk/: Makefile.am  build.mk  log.c
src/libntk/andns/: andns_lib.c  andns_net.c  build.mk
src/libntk/utils/: build.mk  xmalloc.c
src/ntkconsole/: Makefile.am  build.mk  cmd.c  main.c  ntkconsole.h  request.c
src/ntkd/: Makefile.am  build.mk  daemon.c  main.c  map.h  opt.c  opt.h
src/ntkd/net/: interface.c  interface.h
src/ntkresolv/: Makefile.am  build.mk  main.c  opt.c  opt.h
test/: test_buffer.c  test_common.c  test_misc.c
